test/compile-fail/fuzz_nested_if_without_endif.c
#if 0
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
#ifdef X
